--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "4.0.0",
 		"@vitest/coverage-v8": "1.6.0",
-		"wx-vite-tools": "1.0.5",
 		"autoprefixer": "10.4.20",
 		"cypress": "13.6.4",
 		"eslint": "9.14.0",
@@ -51,12 +50,13 @@
 		"shx": "0.3.4",
 		"svelte": "5.1.9",
 		"svelte-spa-router": "4.0.1",
-		"typescript-eslint": "8.13.0",
 		"typescript": "5.6.3",
+		"typescript-eslint": "8.13.0",
+		"vite": "5.4.10",
 		"vite-plugin-conditional-compile": "1.4.5",
 		"vite-plugin-dts": "3.7.2",
-		"vite": "5.4.10",
-		"vitest": "1.5.0"
+		"vitest": "1.5.0",
+		"wx-vite-tools": "1.0.5"
 	},
 	"lint-staged": {
 		"*.{ts,js,svelte}": [
