--- a/store/package.json
+++ b/store/package.json
@@ -18,7 +18,7 @@
 		"license.txt"
 	],
 	"dependencies": {
-		"wx-lib-state": "1.9.0",
-		"date-fns": "3.6.0"
+		"date-fns": "3.6.0",
+		"wx-lib-state": "1.9.0"
 	}
 }
